--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "anderssn",
   "contributors": [],
   "dependencies": {
-    "socket.io": "^2.0.1"
+    "socket.io": "^2.0.1",
+    "mongodb": "2.2.35"
   }
 }
