--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,15 @@
   "author": "anderssn",
   "contributors": [],
   "dependencies": {
-    "socket.io": "^2.0.1",
-    "mongodb": "2.2.35"
+    "config": ">=2.0.1",
+    "express": ">=4.16.4",
+    "mongodb": "2.2.35",
+    "socket.io": "^2.1.1",
+    "morgan": ">=1.9.1"
+  },
+  "scripts": {
+    "start": "node main.js",
+    "dev": "set NODE_ENV=development&& node main.js",
+    "prod": "set NODE_ENV=production&& node main.js"
   }
 }
