rtc tree alpha v0.1

--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,9 @@
     "config": ">=2.0.1",
     "express": ">=4.16.4",
     "mongodb": "2.2.35",
+    "morgan": ">=1.9.1",
     "socket.io": "^2.1.1",
-    "morgan": ">=1.9.1"
+    "socket.io-request": "^0.8.0"
   },
   "scripts": {
     "start": "node main.js",
