--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-server/node_modules/*
-server/package-lock.json
-server/config.js
-client/res/img/classIcons/*
 server/config/*
 .vscode/*
-server/package-lock.json
-node_modules/*
-package-lock.json
+**/node_modules
+**/package-lock.json
